--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -99,7 +99,7 @@ bookmarks, colorlinks, breaklinks,
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Senior Lecturer in Sound and Music Computing}\\
 Centre for Digital Music (C4DM)\\
-School of Electronic Engineering and Computer Science\\
+School of Electronic Engineering and Computer Science (EECS)\\
 Queen Mary University of London (QMUL)\\
 London, United Kingdom\\[.2cm]
 %\textsc{phone}: \texttt{(+44) (0) 737-879-6645}\\
@@ -455,6 +455,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2024} \textsc{Invited Talk} (January 24, 2024). "Reflections on the use of CC sounds in creative computing". \emph{Research Forum. CeReNeM: Centre for Research in New Music}. University of Huddersfield. Huddersfield, UK.\\ 
+\years{2023e} \textsc{Panel Member (online)} (December 16, 2023). "AI in performance" with Thor Magnusson, Federico Visi, Anna Xambó. Moderated by Norbert Schnell. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
+\years{2023d} \textsc{Panel Member (online)} (December 15, 2023). "AI and ethics" with Artemi Gioti, Genoël Von Lilienstern, Gerard Roma, Rujing Stacy Huang, Anna Xambó. Moderated by Norman Müller. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
 \years{2023c} \textsc{Keynote Speaker} (November 14, 2023). "From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
 \years{2023b} \textsc{Invited Talk/Workshop (online)} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
 \years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
@@ -804,6 +807,9 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
+\years{01/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
+Master/undergraduate course. Queen Mary University of London, London, UK.\\
+Role: Lecturer of a 15-credit course with two lecturers, two teaching assistants and 8 demonstrators.\\ 
 \years{10/2019}Course: \emph{MCT4000 Music Communication and Technology}. \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Coordination of a 15-credit course which includes 7 modules.\\
@@ -830,6 +836,9 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{01/2024--04/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
+Master/undergraduate course. Queen Mary University of London, London, UK.\\
+Role: Lecturer of a 15-credit course with two lecturers, two teaching assistants and 8 demonstrators.\\ 
 \years{10/2023--12/2023}Course: \emph{MATT3000\_2324 Research Project} (10 h). \# Students: $\sim$25-30. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, instruction, coordination and assessment.\\
@@ -953,10 +962,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
-%\years{10/2023--present}1st supervisor of Shuoyang Zheng. QMUL.\\
-\years{11/2022--present}2nd supervisor of Christopher Cousin. DMU.\\
-\years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
-\years{04/2022--present}2nd supervisor of Eva Kára. DMU.
+\years{10/2023--present}1st supervisor of Shuoyang Zheng. AIM. C4DM-QMUL.\\
+\years{11/2022--12/2023}2nd supervisor of Christopher Cousin. DMU.\\
+\years{08/2022--12/2023}2nd supervisor of Sam Topley. DMU.\\
+\years{04/2022--12/2023}2nd supervisor of Eva Kára. DMU.
 
 \subsection*{Master Students}
 \years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth. Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}. Master programme: Music Technology and Innovation, DMU. \\
@@ -1027,9 +1036,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Professional Organization Member}
 \noindent
-\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
+\emph{Female Academic Network. EECS, QMUL.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.\\
+\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
 \emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
 
 \subsection*{Membership of External Committees}
@@ -1054,7 +1064,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 
 \years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
-\years{08/2018--01/2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of EECS, QMUL.
+\years{08/2018--01/2019}\emph{Visiting Lecturer}, C4DM, EECS, QMUL.
 
 
 \subsection*{Officer / Consultant}
@@ -1068,6 +1078,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
 
+\years{2024}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2024). Utrecht, Netherlands.\\
 \years{2023}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2023). Mexico City, Mexico.\\
 \years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
 \years{2021b}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2022}. KAIST, Daejeon, Republic of Korea.\\
@@ -1156,7 +1167,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Jury Member}
 \noindent
 
-\years{2023--2024}\emph{Generative Music Prize/Prix Musique Generative}, IRCAM Forum, Paris, France.\\
+\years{2024}\emph{Generative Music Prize/Prix Musique Generative}, IRCAM Forum, Paris, France.\\
 \years{2021}\emph{Pamela Z Award for Innovation (NIME '21)}, NYU Shanghai, Shanghai, China.\\
 \years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
 \years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
