--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -95,7 +95,7 @@ bookmarks, colorlinks, breaklinks,
 \pagenumbering{gobble} % this suppresses page numbering
 
 {\textbf{Anna Xambó Sedó}}\\ 
-Senior Lecturer in Music and Audio Technology, De Montfort University (DMU) -- \href{http://annaxambo.me/}{annaxambo.me}\\
+Senior Lecturer in Sound and Music Computing, Centre for Digital Music, QMUL -- \href{https://annaxambo.me/}{annaxambo.me}\\
 
 {\textbf{Education}}\\
 \textsc{PhD}, Music computing \& HCI, The Open University (OU), 2015.\\
@@ -103,8 +103,7 @@ MSc, Information, Communication and Audiovisual Media Technologies, Universitat 
 BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
-Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audio electronics, studio technology and DSP. 
-I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--19) and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
+Senior Lecturer, QMUL, 2024--present. I have been senior lecturer, De Montfort University (DMU) (2020--2023); associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU; visiting lecturer and postdoc at Queen Mary University of London (2017--19); and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
 I have been working for 10 years (2000--10) as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
 {\textbf{Grants/Awards/Accolades}} from AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
