--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -108,8 +108,10 @@ London, United Kingdom\\[.2cm]
 
 %%\hrule
 \section*{Current Academic Roles}
----\emph{Senior Lecturer in Sound and Music Computing}, C4DM,  Queen Mary University of London, UK.\\
----\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.
+---\emph{Senior Lecturer in Sound and Music Computing}, C4DM, QMUL, UK.\\
+---\emph{Principal Investigator}, AHRC Sensing the Forest.\\
+---\emph{Member}, EECS Women in Higher Education (WHEN), QMUL, UK.\\
+---\emph{Associate Fellow}, Higher Education Academy, United Kingdom.
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
@@ -215,7 +217,7 @@ Role: Creator \& Director.
 Funding body: AHRC. \\
 Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
 Role: PI. \\
-Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Forest Research; Forestry England. \\
+Partners: C4DM, QMUL; Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University (DMU); Forest Research; Forestry England. \\
 %Collaborators: .\\
 Total Pound Amount: \pounds250,000 \\
 
@@ -236,7 +238,7 @@ Total Pound Amount: \pounds1,000 \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
-Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
+Partners: (MTI$^2$), DMU; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
 Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
 Total Pound Amount: \pounds10,000 \\%[.2cm]
 
@@ -515,6 +517,8 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Own Institution}
 \noindent
 
+\years{2024} \textsc{Oral Presenter}. (March 13, 2024). “Collaborative, Participatory and Practice-based Research Methods for Sound and Music Computing". \emph{CogSci seminar}. Queen Mary University of London. London, UK.\\
+\years{2024} \textsc{Oral Presenter}. (February 22, 2024). “Sound and Music Computing Goes Wild: From Communities to Ecosystems". \emph{AIM Forum}. Centre for Digital Music. Queen Mary University of London. London, UK.\\
 \years{2023b} \textsc{Panel Member} together with Adewole, F., Ferril, S., Kasumovic, M. (November 29, 2023). “Practice Research Roundtable Discussion". Online panel discussion moderated by Alissa Clarke and Rosie Garton. DMU, Leicester, UK.\\
 \years{2023a} \textsc{Oral Presenter} together with Batchelor, P. (November 29, 2023). “The Sensing the Forest project". \emph{IOCT5007 Research Methods for Creative Projects}. DMU, Leicester, UK.\\
 \years{2022b} \textsc{Oral Presenter}. (December 7, 2022). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
@@ -798,7 +802,9 @@ Collaborators: Babylon Cannes (concept).\\
 
 \years{09/2001}\emph{Eme3density, Second Architectural Market}, Centre de Cultura Contemporània de Barcelona (CCCB), Barcelona.\\
 Role: Visuals \& Flash programming. \\ %(Flash animation and programming of the website presented in the event).\\
-Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
+Collaborators: Urtzi Grau (curator), Ana Otero (artistic director). 
+
+\newpage
 
 %\hrule
 \section*{Teaching \& Coordination}
@@ -1036,7 +1042,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Professional Organization Member}
 \noindent
-\emph{Female Academic Network. EECS, QMUL.}\\
+\emph{EECS Women in Higher Education Network (WHEN), QMUL.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.\\
 \emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
