--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -428,6 +428,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
+\years{2024} Zheng, S., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``A Mapping Strategy for Interacting with Latent Audio Synthesis Using Artistic Materials''. 2nd International Workshop on eXplainable AI for the Arts (XAIxArts). ACM Creativity and Cognition Conference. Chicago, IL, US.\\
 \years{2020}Fasciani, S., Jensenius, A.R., Støckert, R., \textbf{Xambó, A.} (2020) ``The MCT Portal: An Infrastructure, a Laboratory and a Pedagogical Tool''. Researchers’ Colloquium on Low Latency Streaming in Music Learning and Teaching. Royal Conservatoire of Scotland, Glasgow, UK.\\
 \years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (2017) “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". 2017 Co-Creation Workshop at the International Conference on Computational Creativity. Atlanta, GA, USA.\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on Video Analysis Techniques for HCI}. Birmingham, UK.\\
@@ -457,14 +458,17 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2024} \textsc{Invited Talk} (January 24, 2024). "Reflections on the use of CC sounds in creative computing". \emph{Research Forum. CeReNeM: Centre for Research in New Music}. University of Huddersfield. Huddersfield, UK.\\ 
+\years{2024d} \textsc{Panel Member} (June 13, 2024). "We are the music makers\dots AI \& Music Forum" (Sonar+D) with Anna Xambó (C4DM-QMUL), Magda Polo (UB EKHO), Rob Clouth, Sergi Jordà (UPF), and Thor Magnusson (Intelligent Instruments Lab). Moderated by Günseli Yalcinkaya (Dazed). Curated by Antònia Folguera (Sonar+D). Powered by S+T+Arts.  \emph{AI \& Music Forum}, Sonar Festival, Barcelona, Spain.\\ 
+\years{2024c} \textsc{Invited Talk} (April 24, 2024). "In the search for sound-based music using MIRLCa, a SuperCollider extension for live coding a coral of sounds". \emph{NOTAM SuperCollider Meetup with James Harkins and Anna Xambó}. Online.\\ 
+\years{2024b} \textsc{Panel Member} (April 12, 2024). "The Development and Application of AI in Music" with Dr Anna Xambó Sedó, Dr Geraint A. Wiggins, Dr Oded Ben-Tal and Dr Robin Laney. Moderated by Dr. Sven-Amin Lembke. \emph{Sound of Tomorrow}.  Anglia Ruskin University's Helmore Recital Hall, Cambridge, UK.\\ 
+\years{2024a} \textsc{Invited Talk} (January 24, 2024). "Reflections on the use of CC sounds in creative computing". \emph{Research Forum. CeReNeM: Centre for Research in New Music}. University of Huddersfield. Huddersfield, UK.\\ 
 \years{2023e} \textsc{Panel Member (online)} (December 16, 2023). "AI in performance" with Thor Magnusson, Federico Visi, Anna Xambó. Moderated by Norbert Schnell. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
 \years{2023d} \textsc{Panel Member (online)} (December 15, 2023). "AI and ethics" with Artemi Gioti, Genoël Von Lilienstern, Gerard Roma, Rujing Stacy Huang, Anna Xambó. Moderated by Norman Müller. \emph{AI in Music - Agency, Performance, Production and Perception}.  University of Music Trossingen/KISS project, Trossingen, Germany / online.\\ 
 \years{2023c} \textsc{Keynote Speaker} (November 14, 2023). "From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
 \years{2023b} \textsc{Invited Talk/Workshop (online)} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
 \years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
 }. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
-\years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antonia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
+\years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antònia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
 \years{2022f} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
 \years{2022e} \textsc{Invited Talk} (November 11, 2022). "HCI meets AI in Live Coding: A Practitioner's Perspective". \emph{Symposium Technoscientific
 Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, Finland. \href{https://vimeo.com/779151561}{[video]}\\ 
@@ -620,9 +624,9 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 
 \years{2021}Dirty Electronics Ensemble, Jon.Ogara, and Anna Xambó. \emph{Dirty Dialogues} (live album) [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} (EP) [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
-\years{1996}La Más Fina. \emph{Zande Phondex}. Promo [CD]. Barcelona: Apache Productions.\\
-\years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina}. Promo [Cassette]. Barcelona: Self-released.\\
-\years{1992}Sosa's Cáustica. \emph{Paraponera Clavata}. Promo [Cassette]. Barcelona: Murmur Town.
+\years{1999}La Más Fina. \emph{Zande Phondex}. Promo [CD]. Barcelona: Apache Productions.\\
+\years{1996}La Más Fina. \emph{Como quien dice la hoja iberia extrafina}. Promo [Cassette]. Barcelona: Self-released.\\
+\years{1994}Sosa's Cáustica. \emph{Paraponera Clavata}. Promo [Cassette]. Barcelona: Murmur Town.
 
 \subsection*{Participation in Compilations}
 \noindent
@@ -804,7 +808,7 @@ Collaborators: Babylon Cannes (concept).\\
 Role: Visuals \& Flash programming. \\ %(Flash animation and programming of the website presented in the event).\\
 Collaborators: Urtzi Grau (curator), Ana Otero (artistic director). 
 
-\newpage
+%\newpage
 
 %\hrule
 \section*{Teaching \& Coordination}
@@ -969,8 +973,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{PhD Students}
 \years{10/2023--present}1st supervisor of Shuoyang Zheng. AIM. C4DM-QMUL.\\
+\years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
 \years{11/2022--12/2023}2nd supervisor of Christopher Cousin. DMU.\\
-\years{08/2022--12/2023}2nd supervisor of Sam Topley. DMU.\\
 \years{04/2022--12/2023}2nd supervisor of Eva Kára. DMU.
 
 \subsection*{Master Students}
@@ -991,6 +995,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{05/2024}Internal PhD examiner for Elizabeth Wilson (May 7, 2024). PhD thesis title: \emph{Affective Live Coding: Fostering Human-Machine Collaboration with Autonomous Agents}. PhD programme: Media and Arts Technology. C4DM. School of EECS, QMUL, London, UK.\\
 \years{02/2023}External PhD examiner for António Ramires (February 9, 2023). PhD thesis title: \emph{Automatic Characterization and Generation of Music Loops and Instrument Samples for Electronic Music Production}. PhD programme: Horizon 2020 MIP-Frontiers. Music Technology Group, Department of Information and Communication Technologies, Universitat Pompeu Fabra, Barcelona, Spain.\\
 \years{06/2022}External Master’s thesis examiner for Stephen Gardener (June 24, 2022), Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
 \years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz (May 3, 2022). PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
@@ -1121,7 +1126,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2023}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2023).\\
+\years{2018--2024}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2023).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
