--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -213,7 +213,7 @@ Role: Creator \& Director.
 
 \subsection*{Principal Investigator}
 
-\years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant (AH/X011585/1)} \\
+\years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant (AH/X011585/1, AH/X011585/2)} \\
 Funding body: AHRC. \\
 Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
 Role: PI. \\
@@ -377,6 +377,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+\years{2024} Zheng, S., Del Sette, B.M., Saitis, C., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``Building Sketch-to-Sound Mapping with Unsupervised Feature Extraction and Interactive Machine Learning''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '24)}. Utrecht, The Netherlands.\\
 {\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 {\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 {\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (2021) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
@@ -458,6 +459,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2024e} \textsc{Invited Tutorial} (September 3, 2024). "Tutorial \#1 – Design strategies and techniques to better support collaborative, egalitarian and sustainable musical interfaces". \emph{DAFx 24}. University of Surrey. Guildford, UK.\\ 
 \years{2024d} \textsc{Panel Member} (June 13, 2024). "We are the music makers\dots AI \& Music Forum" (Sonar+D) with Anna Xambó (C4DM-QMUL), Magda Polo (UB EKHO), Rob Clouth, Sergi Jordà (UPF), and Thor Magnusson (Intelligent Instruments Lab). Moderated by Günseli Yalcinkaya (Dazed). Curated by Antònia Folguera (Sonar+D). Powered by S+T+Arts.  \emph{AI \& Music Forum}, Sonar Festival, Barcelona, Spain.\\ 
 \years{2024c} \textsc{Invited Talk} (April 24, 2024). "In the search for sound-based music using MIRLCa, a SuperCollider extension for live coding a coral of sounds". \emph{NOTAM SuperCollider Meetup with James Harkins and Anna Xambó}. Online.\\ 
 \years{2024b} \textsc{Panel Member} (April 12, 2024). "The Development and Application of AI in Music" with Dr Anna Xambó Sedó, Dr Geraint A. Wiggins, Dr Oded Ben-Tal and Dr Robin Laney. Moderated by Dr. Sven-Amin Lembke. \emph{Sound of Tomorrow}.  Anglia Ruskin University's Helmore Recital Hall, Cambridge, UK.\\ 
@@ -644,6 +646,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Broadcasting}
 \noindent
 
+\years{2024}Anna Xambó's “mnnw". (January 23, 2024). Fractal Meat On A Spongy Bone.\\
 \years{2023b}Anna Xambó's “traces", “residual", “triads" \& “clock". (April 24, 2023). Framework radio \#842.\\
 \years{2023a}Anna Xambó's “traces". (February 13, 2023). TOPLAP w\/ QBRNTHSS \& Loopier (13.02.23). TOPLAP on Dublab.es. Barcelona, Spain.\\
 \years{2021c}Dirty Electronics Ensemble, Jon.Ogara \& Anna Xambó's “Dirty Dialogues". (November 8, 2021). Framework radio \#776.\\
@@ -817,6 +820,8 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
+\years{09/2024}Course: \emph{ECS742P Interactive Digital Multimedia Techniques}. \# Students: $\sim$10--15. \\
+Master course. Queen Mary University of London, London, UK.\\
 \years{01/2024}Course: \emph{ECS637U/ECS757P Digital Media and Social Networks 2023/24}. \# Students: $\sim$274. \\
 Master/undergraduate course. Queen Mary University of London, London, UK.\\
 Role: Lecturer of a 15-credit course with two lecturers, two teaching assistants and 8 demonstrators.\\ 
@@ -995,6 +1000,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{08/2024}External PhD examiner for CHEN Manni (August 14, 2024). PhD thesis title: \emph{Between Noise and Structure: Artificial Intelligence and Humans in Music Production}. PhD programme: Creative Media. City University of Hong Kong, Hong Kong.\\
 \years{05/2024}Internal PhD examiner for Elizabeth Wilson (May 7, 2024). PhD thesis title: \emph{Affective Live Coding: Fostering Human-Machine Collaboration with Autonomous Agents}. PhD programme: Media and Arts Technology. C4DM. School of EECS, QMUL, London, UK.\\
 \years{02/2023}External PhD examiner for António Ramires (February 9, 2023). PhD thesis title: \emph{Automatic Characterization and Generation of Music Loops and Instrument Samples for Electronic Music Production}. PhD programme: Horizon 2020 MIP-Frontiers. Music Technology Group, Department of Information and Communication Technologies, Universitat Pompeu Fabra, Barcelona, Spain.\\
 \years{06/2022}External Master’s thesis examiner for Stephen Gardener (June 24, 2022), Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
@@ -1050,8 +1056,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \emph{EECS Women in Higher Education Network (WHEN), QMUL.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.\\
-\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
-\emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
+%\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
+%\emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
 
 \subsection*{Membership of External Committees}
 \noindent
@@ -1088,7 +1094,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
-
+\years{2025}\textsc{Conference Papers Co-Chair}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
 \years{2024}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2024). Utrecht, Netherlands.\\
 \years{2023}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2023). Mexico City, Mexico.\\
 \years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
